added fav icon, updated index

--- a/index.html
+++ b/index.html
@@ -30,13 +30,32 @@
    </nav>
    
    <section>
-      <h3>Virtual Map and Mapping Trade Show "Booths"</h3>
+      <h3>Interactive Design</h3>
       <ul>
+         <li>
+            <a href="">
+               Interactive Web Page - A Guide to Using Github Pages
+            </a>
+         </li>
          <li>
             <a href="https://support.pathable.com/hc/en-us/articles/360050252413-Add-a-Virtual-Map-and-Mapping-Tradeshow-Booths-">
                Interactive Web Design - Virtual Map and Mapping Trade Show "Booths"
             </a>
          </li>
+      </ul>
+   </section>
+
+   <section>
+      <h3>Charitable Organizations</h3>
+      <ul>
+         <li><a href="https://bestfriends.org/">Best Friends Animal Society</a></li>
+      </ul>
+   </section>
+
+   <section>
+      <h3>CS80 - Internet Programming</h3>
+      <ul>
+         <li><a href="cs80">CS80 - Internet Programming</a></li>
       </ul>
    </section>
 
