--- a/c_programming/index.html
+++ b/c_programming/index.html
@@ -32,7 +32,7 @@
       <section id="c_programming" class="level1">
          <h3>C Programming Examples</h3>
          <ol>
-            <li><a href="proSprC"></a>Deutschsprachige Programme in der Programmiersprache C</li>
+            <li><a href="proSprC">Deutschsprachige Programme in der Programmiersprache C</a></li>
             <li><a href="">Kathe's Program - Coming Soon!</a></li>
             <li><a href="u6_exponential_growth.c">Rob's Exponential Growth Program</a></li>
 
