added images of Magnus and Lily

--- a/index.html
+++ b/index.html
@@ -28,7 +28,18 @@
    <button onclick="toggleFunction()">Toggle Dark Mode</button>
    <script type="text/javascript" src="togfun.js"></script>
    </nav>
-   
+   <figure>
+   	  <a href="https://ixd.smc.edu">
+	  	 <img src="magnus.jpg" alt="Magnus, a gray tabby cat, stares into the camera" width="95">
+	  </a>
+	  <figcaption style="color: #40e0d0">IxD and UX</figcaption>
+   </figure>
+   <figure style="display: inline-block">
+   <a href="https://de.wikipedia.org/wiki/Lilith">
+	  <img src="lilith.jpg" alt="Lily, a black cat, lying on her back" width="95">
+   </a>
+   <figcaption style="color: #40e0d0">Wikipedia</figcaption>
+   </figure>
    <section>
       <h3>Interactive Design</h3>
       <ul>
