added pong links and code by straker

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
    </nav>
    <figure>
    	  <a href="https://ixd.smc.edu">
-	  	 <img src="magnus.jpg" alt="Magnus, a gray tabby cat, stares into the camera" width="95">
+	  	 <img src="magnus.jpg" alt="Magnus, a brown tabby cat with aqua green eyes, stares into the camera" height="95">
 	  </a>
 	  <figcaption style="color: #40e0d0">IxD and UX</figcaption>
    </figure>
@@ -40,6 +40,24 @@
    </a>
    <figcaption style="color: #40e0d0">Wikipedia</figcaption>
    </figure>
+
+   <section>
+      <h3>Pong Games</h3>
+      <ul>
+         <li>
+            <a href="pong_0.html">
+               First Pong - In Progress 
+            </a>
+         </li>
+         <li>
+            <a href="pong_1.html">
+               Second Pong - In Progress
+            </a>
+         </li>
+      </ul>
+   </section>
+
+
    <section>
       <h3>Interactive Design</h3>
       <ul>
