added background image

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <link rel="icon"  href="favicon_hex4.ico" type="image/x-icon">
       
    </head>
-   <h1 class="h1_top">The Cat's Aegis</h1>
+   <h1 class="h1_top"><span>The Cat's Aegis</span></h1>
    <nav class="nav_top">
    <button onclick="toggleFunction()">Toggle Dark Mode</button>
    <script type="text/javascript" src="togfun.js"></script>
