fixed typo in favicon link

--- a/c_programming/proSprC/index.html
+++ b/c_programming/proSprC/index.html
@@ -14,7 +14,7 @@
   <meta charset="utf-8">
     <meta charset="utf-8">
   <link rel="stylesheet" href="proSprC.css">
-  <link rel="icon" type="image/x-icon" href="favicon_hex4">
+  <link rel="icon" type="image/x-icon" href="favicon_hex4.ico">
 </head>
 
 <body>
