added contents of directory

--- a/c_programming/proSprC/mitZahlAr/ganz_zahlen.html
+++ b/c_programming/proSprC/mitZahlAr/ganz_zahlen.html
@@ -22,7 +22,13 @@
   <p><h1 align="center">Mit ganzen Zahlen rechnen</h1></p>
   <br>
   <br>
-  <p align="center"><a href="#ganzen_zahlen">Mit ganzen Zahlen rechnen</a>&nbsp;&nbsp;&nbsp;<a href="#fließkomma-zahlen">Fließkomma-Zahlen</a>&nbsp;&nbsp;&nbsp;<a href="#formatierte_zahlenausgabe">Formatierte Zahlenausgabe</a>&nbsp;&nbsp;&nbsp;<a href="#ein_additionsprogramm">Ein Additionsprogramm</a>&nbsp;&nbsp;&nbsp;<a href="#zusammenfassung">Zusammenfassung</a>&nbsp;&nbsp;&nbsp;<a href="#uebungen">Übungen</a></p>
+  <p align="center">
+     <a href="#ganzen_zahlen">Mit ganzen Zahlen rechnen</a>&nbsp;&nbsp;&nbsp;
+     <a href="#fließkomma-zahlen">Fließkomma-Zahlen</a>&nbsp;&nbsp;&nbsp;
+     <a href="#formatierte_zahlenausgabe">Formatierte Zahlenausgabe</a>&nbsp;&nbsp;&nbsp;
+     <a href="#ein_additionsprogramm">Ein Additionsprogramm</a>&nbsp;&nbsp;&nbsp;
+     <a href="#zusammenfassung">Zusammenfassung</a>&nbsp;&nbsp;&nbsp;
+     <a href="#uebungen">Übungen</a></p>
   <br>
   <br>
   <p><h2 id="ganzen_zahlen", align="center">Mit ganzen Zahlen rechnen</h2></p>
@@ -99,6 +105,7 @@
     <li>In ihrer Dokumentation ist zu jeder einzelnen Funktion angegeben, welche <i>include</i>-Datei von ihr benötigt wird.</li>
   </ul>
   <br>
+  <a href="index.html">Home</a>
 
 </body>
 
