--- a/c_programming/proSprC/mitZahlAr/index.html
+++ b/c_programming/proSprC/mitZahlAr/index.html
@@ -3,14 +3,14 @@
 <!--
 
    Programmer: Robert Aguilar
-   Date:       10/18/20
+   Date:       10/25/20
    Filename:   index.html
 
 -->
 
 <html lang="en">
 <head>
-  <title>Mit Zahlen Arbeiten in C</title>
+  <title>Mit Zahlen Arbeiten</title>
   <meta charset="utf-8">
     <meta charset="utf-8">
   <link rel="stylesheet" href="proSprC.css">
@@ -19,11 +19,11 @@
 
 <body>
   <br>
-  <p><h1 align="center">Mit Zahlen arbeiten in C</h1></p>
+  <p><h1 align="center">Mit Zahlen arbeiten</h1></p>
   <br>
   <br>
   <p align="center">
-   <a href="ganzen_zahlen.html">Mit ganzen Zahlen rechnen</a>&nbsp;&nbsp;&nbsp;
+   <a href="ganz_zahlen.html">Mit ganzen Zahlen rechnen</a>&nbsp;&nbsp;&nbsp;
    <a href="fließkomma_zahlen.html">Fließkomma-Zahlen</a>&nbsp;&nbsp;&nbsp;
    <a href="formatierte_zahlenausgabe.html">Formatierte Zahlenausgabe</a>&nbsp;&nbsp;&nbsp;
    <a href="ein_additionsprogramm.html">Ein Additionsprogramm</a>&nbsp;&nbsp;&nbsp;
@@ -33,6 +33,7 @@
   <br>
   <br>
 
+  <a href="../index.html">Home</a>
 </body>
 
 </html>
