udpated index file

--- a/c_programming/proSprC/index.html
+++ b/c_programming/proSprC/index.html
@@ -19,7 +19,7 @@
 
 <body>
   <br>
-  <p><h1 align="center">Mit Zahlen arbeiten in C</h1></p>
+  <p><h1 align="center">Die Programmiersprache C</h1></p>
   <br>
   <br>
   <p align="center">
@@ -27,13 +27,13 @@
      <a href="entTref">Entscheidungen treffen</a>&nbsp;&nbsp;&nbsp;
      <a href="">Noch im Bau</a>&nbsp;&nbsp;&nbsp;
      <a href="">Noch im Bau</a>&nbsp;&nbsp;&nbsp;
-     <a href="">Zusammenfassung</a>&nbsp;&nbsp;&nbsp;
-     <a href="uebungen">Übungen</a>
+     <a href="">Zusammenfassung - Noch im Bau</a>&nbsp;&nbsp;&nbsp;
+     <a href="uebungen">Übungen - Noch im Bau</a>
   </p>
   <br>
   <br>
   <br>
-
+  <a href="../index.html">Home</a>
 </body>
 
 </html>
