added strong tag to sequentiality concept

--- a/c_programming/proSprC/entTref/index.html
+++ b/c_programming/proSprC/entTref/index.html
@@ -34,8 +34,8 @@
   <br>
   <p><h2 align="center">Entscheidungen treffen</h2></p>
   <ul>
-    <li>In den ersten drei Kapiteln haben Sie Programme nit einer sequentiellen Struktur geschrieben.</li>
-    <li>Die Befehle wurden hierbei von oben nach unten der Reihe nach abgearbeitet.</li>
+    <li>In den ersten drei Kapiteln haben Sie Programme <strong>mit einer sequentiellen Struktur</strong> geschrieben.</li>
+    <li>Die Befehle wurden <strong>hierbei von oben nach unten der Reihe nach</strong> abgearbeitet.</li>
     <li>In diesem Kapitel werden Sie eine wichtige Programmstruktur kennelernen: die bedingten Answeisungen.</li>
     <li>Mit Hilfe solcher Entscheidungen kann bestimmt werden, welcher Programmteil zu durchlaufen ist.</li>
   </ul>
