added emphasis to concepts

--- a/c_programming/proSprC/entTref/index.html
+++ b/c_programming/proSprC/entTref/index.html
@@ -36,8 +36,12 @@
   <ul>
     <li>In den ersten drei Kapiteln haben Sie Programme <strong>mit einer sequentiellen Struktur</strong> geschrieben.</li>
     <li>Die Befehle wurden <strong>hierbei von oben nach unten der Reihe nach</strong> abgearbeitet.</li>
-    <li>In diesem Kapitel werden Sie eine wichtige Programmstruktur kennelernen: die bedingten Answeisungen.</li>
-    <li>Mit Hilfe solcher Entscheidungen kann bestimmt werden, welcher Programmteil zu durchlaufen ist.</li>
+    <li>
+      In diesem Kapitel werden Sie eine wichtige <u>Programmstruktur</u> kennenlernen: <u>die bedingten Answeisungen</u>.
+    </li>
+    <li>
+      <u>Mit Hilfe solcher Entscheidungen</u> kann bestimmt werden, <u>welcher</u> Programmteil <u>zu durchlaufen ist</u>.
+    </li>
   </ul>
   <br>
   <a href="../index.html">Home</a>
